# srt-translator-backend

./: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/configs/: environment.py
app/routers/: translator_router.py
app/services/: translator_service.py
