[tool.poetry]
name = "srt-translator-back"
version = "0.1.0"
description = ""
authors = ["Anelio Alvarez <anelio272014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
deep-translator = "^1.11.4"
srt = "^3.5.3"
python-multipart = "^0.0.6"
detectlanguage = "^1.5.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
